<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:vudroid="http://schemas.android.com/apk/res/vudroid"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:summary="@string/pref_ui_category_summary"
        android:title="@string/pref_ui_category" >

        <CheckBoxPreference
            android:defaultValue="@string/pref_loadrecent_defvalue"
            android:key="@string/pref_loadrecent_id"
            android:summary="@string/pref_loadrecent_summary"
            android:title="@string/pref_loadrecent_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_nightmode_id"
            android:key="@string/pref_nightmode_id"
            android:summary="@string/pref_nightmode_summary"
            android:title="@string/pref_nightmode_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_brightness_defvalue"
            android:key="@string/pref_brightness_id"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_brightness_summary"
            android:title="@string/pref_brightness_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_brightnessnightmodeonly_defvalue"
            android:key="@string/pref_brightnessnightmodeonly_id"
            android:summary="@string/pref_brightnessnightmodeonly_summary"
            android:title="@string/pref_brightnessnightmodeonly_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_keepscreenon_defvalue"
            android:key="@string/pref_keepscreenon_id"
            android:summary="@string/pref_keepscreenon_summary"
            android:title="@string/pref_keepscreenon_title" />

        <ListPreference
            android:defaultValue="@string/pref_rotation_auto"
            android:entries="@array/pref_rotation_entries"
            android:entryValues="@array/pref_rotation_values"
            android:key="@string/pref_rotation_id"
            android:summary="@string/pref_rotation_summary"
            android:title="@string/pref_rotation_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_fullscreen_defvalue"
            android:key="@string/pref_fullscreen_id"
            android:summary="@string/pref_fullscreen_summary"
            android:title="@string/pref_fullscreen_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_title_defvalue"
            android:key="@string/pref_title_id"
            android:summary="@string/pref_title_summary"
            android:title="@string/pref_title_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_pageintitle_defvalue"
            android:dependency="@string/pref_title_id"
            android:key="@string/pref_pageintitle_id"
            android:summary="@string/pref_pageintitle_summary"
            android:title="@string/pref_pageintitle_title" />

        <CheckBoxPreference
            android:defaultValue="@string/pref_showanimicon_defvalue"
            android:key="@string/pref_showanimicon_id"
            android:summary="@string/pref_showanimicon_summary"
            android:title="@string/pref_showanimicon_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/pref_scroll_category_summary"
        android:title="@string/pref_scroll_category" >

        <CheckBoxPreference
            android:defaultValue="@string/pref_tapsenabled_defvalue"
            android:key="@string/pref_tapsenabled_id"
            android:summary="@string/pref_tapsenabled_summary"
            android:title="@string/pref_tapsenabled_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_scrollheight_defvalue"
            android:key="@string/pref_scrollheight_id"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_scroll_summary"
            android:title="@string/pref_scroll_title" />

        <EditTextPreference
            android:defaultValue="@string/pref_touchdelay_defvalue"
            android:key="@string/pref_touchdelay_id"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_touchdelay_summary"
            android:title="@string/pref_touchdelay_title" />

    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/pref_performance_category_summary"
        android:title="@string/pref_performance_category" >

        <EditTextPreference
            android:defaultValue="@string/pref_pagesinmemory_defvalue"
            android:key="@string/pref_pagesinmemory_id"
            android:maxLength="3"
            android:numeric="integer"
            android:summary="@string/pref_pagesinmemory_summary"
            android:title="@string/pref_pagesinmemory_title" />

        <PreferenceCategory
            android:summary="@string/pref_lowlevel_category_summary"
            android:title="@string/pref_lowlevel_category" >

            <ListPreference
                android:defaultValue="@string/pref_docviewtype_surface"
                android:entries="@array/pref_docviewtype_entries"
                android:entryValues="@array/pref_docviewtype_values"
                android:key="@string/pref_docviewtype_id"
                android:summary="@string/pref_docviewtype_summary"
                android:title="@string/pref_docviewtype_title" />

            <ListPreference
                android:defaultValue="@string/pref_thread_priority_normal"
                android:entries="@array/pref_thread_priority_entries"
                android:entryValues="@array/pref_thread_priority_values"
                android:key="@string/pref_decodethread_priority_id"
                android:summary="@string/pref_decodethread_priority_summary"
                android:title="@string/pref_decodethread_priority_title" />

            <ListPreference
                android:defaultValue="@string/pref_thread_priority_normal"
                android:entries="@array/pref_thread_priority_entries"
                android:entryValues="@array/pref_thread_priority_values"
                android:key="@string/pref_drawthread_priority_id"
                android:summary="@string/pref_drawthread_priority_summary"
                android:title="@string/pref_drawthread_priority_title" />

            <CheckBoxPreference
                android:defaultValue="@string/pref_hwa_enabled_defvalue"
                android:key="@string/pref_hwa_enabled_id"
                android:summary="@string/pref_hwa_enabled_summary"
                android:title="@string/pref_hwa_enabled_title" />

            <ListPreference
                android:defaultValue="@string/pref_bitmapsize_128"
                android:entries="@array/pref_bitmapsize_entries"
                android:entryValues="@array/pref_bitmapsize_values"
                android:key="@string/pref_bitmapsize_id"
                android:summary="@string/pref_bitmapsize_summary"
                android:title="@string/pref_bitmapsize_title" />

            <CheckBoxPreference
                android:defaultValue="@string/pref_texturereuse_defvalue"
                android:key="@string/pref_texturereuse_id"
                android:summary="@string/pref_texturereuse_summary"
                android:title="@string/pref_texturereuse_title" />

            <CheckBoxPreference
                android:defaultValue="@string/pref_earlyrecycling_defvalue"
                android:key="@string/pref_earlyrecycling_id"
                android:summary="@string/pref_earlyrecycling_summary"
                android:title="@string/pref_earlyrecycling_title" />

            <CheckBoxPreference
                android:defaultValue="@string/pref_reloadduringzoom_defvalue"
                android:key="@string/pref_reloadduringzoom_id"
                android:summary="@string/pref_reloadduringzoom_summary"
                android:title="@string/pref_reloadduringzoom_title" />

            </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/pref_render_category_summary"
        android:title="@string/pref_render_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="splitpages"
            android:summary="@string/pref_splitpages_summary"
            android:title="@string/pref_splitpages_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="croppages"
            android:summary="@string/pref_croppages_summary"
            android:title="@string/pref_croppages_title" />

        <ListPreference
            android:defaultValue="Vertical scroll"
            android:entries="@array/list_viewmode"
            android:entryValues="@array/list_viewmode_values"
            android:key="viewmode"
            android:summary="@string/pref_viewmode_summary"
            android:title="@string/pref_viewmode_title" />

        <PreferenceCategory
            android:summary="@string/pref_singlepage_category_summary"
            android:title="@string/pref_singlepage_category" >

            <ListPreference
                android:defaultValue="By Width"
                android:entries="@array/list_align"
                android:entryValues="@array/list_align_values"
                android:key="align"
                android:summary="@string/pref_align_summary"
                android:title="@string/pref_align_title" />

            <ListPreference
                android:defaultValue="None"
                android:entries="@array/list_animation"
                android:entryValues="@array/list_animation_values"
                android:key="animationType"
                android:summary="@string/pref_animationtype_summary"
                android:title="@string/pref_animationtype_title" />
        </PreferenceCategory>

        <PreferenceCategory
            android:key="brfiletypespecific"
            android:summary="@string/pref_brfiletypespecific_summary"
            android:title="@string/pref_brfiletypespecific_title" >

            <PreferenceScreen
                android:summary="@string/pref_brfiletypespecific_summary"
                android:title="@string/pref_brfiletypespecific_title" >

                <PreferenceCategory
                    android:key="brfiletypespecificdjvu"
                    android:summary="@string/pref_brfiletypespecificdjvu_summary"
                    android:title="@string/pref_brfiletypespecificdjvu_title" >

                    <ListPreference
                        android:defaultValue="0"
                        android:entries="@array/list_djvu_rendering_mode"
                        android:entryValues="@array/list_djvu_rendering_mode_values"
                        android:key="djvu_rendering_mode"
                        android:summary="@string/pref_djvu_rendering_mode_summary"
                        android:title="@string/pref_djvu_rendering_mode_title" />

                </PreferenceCategory>

                <PreferenceCategory
                    android:key="brfiletypespecificpdf"
                    android:summary="@string/pref_brfiletypespecificpdf_summary"
                    android:title="@string/pref_brfiletypespecificpdf_title" >

                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="customdpi"
                        android:summary="@string/pref_customdpi_summary"
                        android:title="@string/pref_customdpi_title" />

                    <EditTextPreference
                        android:defaultValue="120"
                        android:dependency="customdpi"
                        android:key="xdpi"
                        android:maxLength="3"
                        android:numeric="integer"
                        android:summary="@string/pref_xdpi_summary"
                        android:title="@string/pref_xdpi_title" />

                    <EditTextPreference
                        android:defaultValue="120"
                        android:dependency="customdpi"
                        android:key="ydpi"
                        android:maxLength="3"
                        android:numeric="integer"
                        android:summary="@string/pref_ydpi_summary"
                        android:title="@string/pref_ydpi_title" />

                </PreferenceCategory>

                <PreferenceCategory
                    android:key="brfiletypespecificfb2"
                    android:summary="@string/pref_brfiletypespecificfb2_summary"
                    android:title="@string/pref_brfiletypespecificfb2_title" >

                    <ListPreference
                        android:defaultValue="NORMAL"
                        android:entries="@array/list_fontsize"
                        android:entryValues="@array/list_fontsize_values"
                        android:key="fontsize"
                        android:summary="@string/pref_fontsize_summary"
                        android:title="@string/pref_fontsize_title" />

                    <CheckBoxPreference
                        android:defaultValue="false"
                        android:key="fb2hyphen"
                        android:summary="@string/pref_fb2hyphen_summary"
                        android:title="@string/pref_fb2hyphen_title" />

                </PreferenceCategory>

            </PreferenceScreen>

        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:key="book_prefs"
        android:summary="@string/pref_book_category_summary"
        android:title="@string/pref_book_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="book_splitpages"
            android:summary="@string/pref_splitpages_summary"
            android:title="@string/pref_splitpages_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="book_croppages"
            android:summary="@string/pref_croppages_summary"
            android:title="@string/pref_croppages_title" />

        <ListPreference
            android:defaultValue="Vertical scroll"
            android:entries="@array/list_viewmode"
            android:entryValues="@array/list_viewmode_values"
            android:key="book_viewmode"
            android:summary="@string/pref_viewmode_summary"
            android:title="@string/pref_viewmode_title" />

        <PreferenceCategory
            android:summary="@string/pref_singlepage_category_summary"
            android:title="@string/pref_singlepage_category" >

            <ListPreference
                android:defaultValue="By Width"
                android:entries="@array/list_align"
                android:entryValues="@array/list_align_values"
                android:key="book_align"
                android:summary="@string/pref_align_summary"
                android:title="@string/pref_align_title" />

            <ListPreference
                android:defaultValue=""
                android:entries="@array/list_animation"
                android:entryValues="@array/list_animation_values"
                android:key="book_animationType"
                android:summary="@string/pref_animationtype_summary"
                android:title="@string/pref_animationtype_title" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:key="browserscreen"
        android:summary="@string/pref_browser_category_summary"
        android:title="@string/pref_browser_category" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="usebookcase"
            android:summary="@string/pref_usebookcase_summary"
            android:title="@string/pref_usebookcase_title" />

        <EditTextPreference
            android:defaultValue="/sdcard"
            android:key="brautoscandir"
            android:summary="@string/pref_brautoscandir_summary"
            android:title="@string/pref_brautoscandir_title" />

        <PreferenceCategory
            android:key="brfiletypesscreen"
            android:summary="@string/pref_brbrfiletypesscreen_summary"
            android:title="@string/pref_brbrfiletypesscreen_title" >

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypedjvu"
                android:summary="@string/pref_brfiletypedjvu_summary"
                android:title="@string/pref_brfiletypedjvu_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypedjv"
                android:summary="@string/pref_brfiletypedjv_summary"
                android:title="@string/pref_brfiletypedjv_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypepdf"
                android:summary="@string/pref_brfiletypepdf_summary"
                android:title="@string/pref_brfiletypepdf_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypexps"
                android:summary="@string/pref_brfiletypexps_summary"
                android:title="@string/pref_brfiletypexps_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypeoxps"
                android:summary="@string/pref_brfiletypeoxps_summary"
                android:title="@string/pref_brfiletypeoxps_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypecbz"
                android:summary="@string/pref_brfiletypecbz_summary"
                android:title="@string/pref_brfiletypecbz_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="brfiletypecbr"
                android:summary="@string/pref_brfiletypecbr_summary"
                android:title="@string/pref_brfiletypecbr_title" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="brfiletypefb2"
                android:summary="@string/pref_brfiletypefb2_summary"
                android:title="@string/pref_brfiletypefb2_title" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="brfiletypefb2.zip"
                android:summary="@string/pref_brfiletypefb2.zip_summary"
                android:title="@string/pref_brfiletypefb2.zip_title" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>